syntax = "proto3";

package event;
option go_package = "./;calendar_event_api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service CalendarEvent {
  rpc GetEvents (GetUserEventsRequest) returns (Events) {
    option (google.api.http) = {
      get: "/get-user-events/{user_id}"
    };
  }
  rpc CreateEvent (CreateEventRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/create-event"
      body: "*"
    };
  }
  rpc UpdateEvent (UpdateEventRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/update-event"
      body: "*"
    };
  }
  rpc DeleteEvent (DeleteEventRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/delete-event"
      body: "*"
    };
  }
}

message DeleteEventRequest {
  string id = 1;
}

message CreateEventRequest {
  int64 user_id = 1;
  string title = 2;
  string duration = 3;
}

message UpdateEventRequest {
  string id = 1;
  string title = 2;
}

message GetUserEventsRequest {
  int64 user_id = 1;
}

message Events {
  repeated Event Content = 1;
}

message Event {
  string id = 1;
  int64 user_id = 2;
  string title = 3;
}
